name:                cert-count-down
version:             0.1.0.0
synopsis:            Count down to expire certification
description:         Count down to expire certification
homepage:            https://github.com/yoshitsugu/cert-count-down
source:              https://github.com/yoshitsugu/cert-count-down
license:             BSD3
license-file:        LICENSE
author:              yoshitsugu
-- maintainer:          example@example.com
-- copyright:           2010 Author Here
category:            Monitor
build-type:          Simple
cabal-version:       >=1.10

executable cert-count-down
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       tls >= 1.3.2 && < 1.4.0,
                       network >= 2.6.2.1 && < 2.6.3.0,
                       bytestring >= 0.10.6.0 && < 0.10.7.0,
                       data-default-class >= 0.0.1 && < 0.0.2,
                       x509-validation >= 1.6.3 && < 1.7.0,
                       x509 >= 1.6.3 && < 1.7.0,
                       x509-system >= 1.6.1 && < 1.7.0,
                       hourglass >= 0.2.9 && < 0.3.0
